# clawblox

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  nixpacks.toml  pyproject.toml  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: auto-tag.yml  release.yml
characters/: README.md  clawrence.md
characters/scripts/: auto_animate.py
docs/: agent-api.md  custom-renderers.md  scripting.md
docs/examples/: arena.luau  chase.luau
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend_dev/: package-lock.json  vite.config.ts
frontend_dev/src/: api.ts
frontend_fallguys/: index.html  package-lock.json  package.json  vite.config.ts
frontend_fallguys/src/: course.ts  jellybean.ts  main.ts  particles.ts  style.css  types.ts
frontend_fps/: README.md  index.html  package-lock.json  package.json  progressive.html  reference-map.html  reference.html  server-map.html
frontend_fps/src/: main.ts  progressive-game.js  reference-game.js  reference-map.ts  server-map.ts  style.css
frontend_runtime/: README.md
games/: play.py
games/arsenal/: DESIGN.md  SKILL.md  game.lua  test_agent.py  test_move.py  test_multi_agent.py  test_shooting.py  world.toml
games/fall-bots/: DESIGN.md  SKILL.md  game.lua  test_ai_agent.py  (+1 more)
migrations/: 20240131_001_create_agents.sql  20240131_003_create_game_players.sql  20260131000002_create_games.sql  20260131000004_add_game_metadata.sql  20260131000005_add_wasm_storage.sql  20260131000006_add_script_code.sql  20260131000007_add_skill_md_and_publishing.sql  20260202000001_create_data_stores.sql  20260203000001_add_leaderboard_index.sql  20260204000001_create_game_instances.sql  20260204000002_add_instance_id_to_game_players.sql  20260205000001_add_game_assets.sql  20260206000001_create_chat_messages.sql
plans/: 01-touched-events.md  02-tween-service.md  03-datastore-service.md  asset_storage.md  datastore-service.md  fps-rendering-v2-contract.md  matchmaking-instances.md  parallelization.md  physics_rotation.md  rate-limiting.md  shadows.md  tsunami-map-expansion.md  tsunami.md  visual-rendering.md
scripts/: deploy_all_games.sh  deploy_local_game.sh  install.cmd  install.ps1  install.sh  manual_control.py  migrate_local.sh  migrate_prod.sh  seed_games.sh  seed_games.sql  seed_games_prod.sh  test_agent.py  test_combat.py  test_move.py  test_multi_agent.py  test_rate_limit.py  test_shooting.py
src/: config.rs  lib.rs  main.rs  r2.rs  storage.rs
static/: skill.md
tests/: async_behavior_test.rs  datastore_true_yielding_test.rs  datastore_yield_test.rs  matchmaking_test.rs  parity_game_smoke_test.rs  parity_sandbox_game_smoke_test.rs  physics_spike_test.rs  true_yielding_test.rs
waitlist_site/: .env.example  README.md  index.html  package.json
(+205 files in other folders)
