[package]
name = "clawblox"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "=0.5.9"
axum = "0.8"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
bevy = { version = "0.15", default-features = false, features = ["multi_threaded"] }
bevy_rapier3d = "0.28"
crossbeam-channel = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
mlua = { version = "0.11", features = ["luau", "serialize", "send"] }
