[package]
name = "clawblox"
version = "0.1.1"
edition = "2021"

[dependencies]
home = "=0.5.9"
axum = { version = "0.8", features = ["ws", "multipart"] }
futures-util = "0.3"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
rapier3d = "0.25"
crossbeam-channel = "0.5"
nalgebra = "0.33"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
mlua = { version = "0.11", features = ["luau", "serialize", "send", "async"] }
dashmap = "6"
parking_lot = "0.12"
toml = "0.8"
flate2 = "1.1"
http = "1"
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
tar = "0.4"
include_dir = "0.7"
rayon = "1.11"
tower_governor = "0.8"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "clawblox"
path = "src/bin/cli.rs"

[[bin]]
name = "clawblox-server"
path = "src/main.rs"
